--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en"  data-theme="black">
+<html lang="en" data-theme="black">
+  <!-- <html lang="en" data-theme={theme}> -->
+<!-- <html lang="en"  /*data-theme="black"*/> -->
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
